moved default classes to package main, started creation MinMax logic

--- a/README
+++ b/README
@@ -8,7 +8,7 @@ make
 **********
 * To Run *
 **********
-java Pacman
+java main.Pacman
 
 **********
 * Output *
@@ -23,8 +23,8 @@ There is no output.  Just play the game.  Enjoy!
 First, edit the code to access the images differently (search code for JAR)
 Then, do the following commands
 
-jar cf Pacman.jar *.class img/ sounds/
+jar cf main.Pacman.jar *.class img/ sounds/
 Then sign using...
-jarsigner Pacman.jar alias
+jarsigner main.Pacman.jar alias
 (You have to set up jarsigner!)
 
